--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,6 +3,8 @@
  *    which computes to 0.9999px & borders can't be sub pixel
  *    we boost the calculation to do 1.1/12
  */
+
+ // If this changes it also needs to change in javascript shared constants
 $font-size: 12;
 
 $thin-border-size: #{1.1/$font-size}rem; /* 1 */
