--- a/src/component/chat/ChatGroup.scss
+++ b/src/component/chat/ChatGroup.scss
@@ -77,6 +77,35 @@
   max-width: #{219/$font-size}rem !important;
 }
 
+.divider {
+  margin-top: #{10/$font-size}rem;
+  padding-top: #{10/$font-size}rem;
+  margin-bottom: #{10/$font-size}rem;
+  overflow: hidden;
+  text-align: center;
+
+  &:before,
+  &:after {
+    background-color: $zd-color-gainsboro;
+    content: "";
+    display: inline-block;
+    height: #{1/$font-size}rem;
+    position: relative;
+    vertical-align: middle;
+    width: 50%;
+  }
+
+  &:before {
+    right: #{12/$font-size}rem;
+    margin-left: -50%;
+  }
+
+  &:after {
+    left: #{12/$font-size}rem;
+    margin-right: -50%;
+  }
+}
+
 .name {
   margin: #{8/$font-size}rem 0;
   color: $zd-color-aluminum !important;
