--- a/src/component/chat/ChatGroup.scss
+++ b/src/component/chat/ChatGroup.scss
@@ -83,6 +83,7 @@
   margin-bottom: #{10/$font-size}rem;
   overflow: hidden;
   text-align: center;
+  color: $zd-color-gainsboro;
 
   &:before,
   &:after {
