Add social media icons for Facebook and Google+

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -50,3 +50,7 @@ $container-width: #{342/$font-size}rem;
 
 $chat-height: 550;
 $chat-header-zindex: 3;
+
+// Icon colors
+$facebook-blue: #3B5998;
+$google-plus-red: #d34836;
