Adjust ChatPreChatForm experience to include social logins

--- a/src/component/chat/ChatPrechatForm.scss
+++ b/src/component/chat/ChatPrechatForm.scss
@@ -28,3 +28,7 @@
 .defaultDropdownText {
   color: $zd-color-iron;
 }
+
+.nameFieldWithSocialLogin {
+  margin-bottom: #{7/$font-size}rem !important;
+}
