Add minor and miscellaneous design tweaks
These are:

* Fix Chat Ratings comment textarea's colour and focus state
* Decrease spinner size from 50px to 32px (28 real px)
* Dismiss main menu on mobile when files attached
* Fix margin on chat details popup

--- a/src/component/chat/ChatBox.scss
+++ b/src/component/chat/ChatBox.scss
@@ -17,6 +17,7 @@
 
   .input {
     height: #{50/$font-size}rem !important;
+    color: $zd-color-oil !important;
 
     &::placeholder {
       color: $zd-color-gainsboro;
