--- a/src/component/chat/ChatPopup.scss
+++ b/src/component/chat/ChatPopup.scss
@@ -37,7 +37,7 @@
   border-radius: #{3/$font-size}rem;
   box-shadow: 0 0 #{8/$font-size}rem 0 rgba($base-shadow, 0.3);
   width: auto;
-  margin: 0 #{10/$font-size}rem;
+  margin: 0 #{10/$font-size}rem #{10/$font-size}rem;
   opacity: 0.98;
 }
 
