--- a/src/component/chat/ChatHeader.scss
+++ b/src/component/chat/ChatHeader.scss
@@ -7,6 +7,8 @@
 .avatar {
   position: absolute;
   box-sizing: border-box;
+  box-shadow: 0 0 0 #{2/$font-size}rem white;
+
   svg {
     padding-left: #{1/$font-size}rem;
   }
@@ -16,31 +18,25 @@
   position: relative;
 }
 
-.avatar:not([src]) {
-  border: #{1/$font-size}rem solid $zd-color-iron;
-}
-
 .avatar:nth-child(1) {
   left: 0;
 }
 
 .avatar:nth-child(2) {
   left: #{20/$font-size}rem;
-  border: white #{1/$font-size}rem solid;
 }
 
 .avatar:nth-child(3) {
   left: #{40/$font-size}rem;
-  border: white #{1/$font-size}rem solid;
 }
 
 .avatarOverflow {
   composes: u-flex u-flexJustifyCenter u-flexAlignItemsCenter from global;
-  border: #{1/$font-size}rem solid $zd-color-iron !important;
   border-radius: 50%;
   background-color: $zd-color-white;
-  height: #{32/$font-size}rem;
-  width: #{32/$font-size}rem;
+  height: #{34/$font-size}rem;
+  width: #{34/$font-size}rem;
+  border: $zd-color-iron #{2/$font-size}rem solid;
 }
 
 .avatarOverflowText {
