--- a/src/component/chat/chatting/ChatGroup.scss
+++ b/src/component/chat/chatting/ChatGroup.scss
@@ -1,5 +1,5 @@
-@import '../../styles/_vars.scss';
-@import '../../styles/mixins.scss';
+@import '../../../styles/_vars.scss';
+@import '../../../styles/mixins.scss';
 
 .container {
   position: relative;
