--- a/src/component/chat/chatting/EventMessage.scss
+++ b/src/component/chat/chatting/EventMessage.scss
@@ -1,5 +1,5 @@
-@import '../../styles/_vars.scss';
-@import '../../styles/mixins.scss';
+@import '../../../styles/_vars.scss';
+@import '../../../styles/mixins.scss';
 
 .eventMessage {
   composes: u-textCenter from global;
