--- a/src/component/chat/prechat/PrechatForm.scss
+++ b/src/component/chat/prechat/PrechatForm.scss
@@ -2,7 +2,7 @@
  * 1. Need to specify here to override c-btn-primary
  */
 
-@import '../../styles/_vars.scss';
+@import '../../../styles/_vars.scss';
 
 .button {
   composes: u-sizeFull u-marginTM from global;
