Move margin to form so that when attachments don't exist it still shows

--- a/src/component/attachment/AttachmentList.scss
+++ b/src/component/attachment/AttachmentList.scss
@@ -6,7 +6,7 @@
 }
 
 .container {
-  composes: u-block u-marginTM u-marginBS from global;
+  composes: u-block u-marginBS from global;
   composes: Form-fieldContainer from '../../styles/components/Form.scss';
 }
 
