--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -9,7 +9,7 @@ $font-size: 12;
 
 $thin-border-size: #{1.1/$font-size}rem; /* 1 */
 
-@import '../../node_modules/zd-css-variables/dist/index';
+@import '../../node_modules/@zendeskgarden/css-variables/dist/index';
 
 // Button colors
 $cta-color: $zd-color-zendesk-green;
