Use new confirmation ticket screen

--- a/src/component/submitTicket/SubmitTicket.scss
+++ b/src/component/submitTicket/SubmitTicket.scss
@@ -74,3 +74,12 @@
 .loadingSpinnerIE {
   composes: u-paddingBXL u-paddingRXL from global;
 }
+
+.successScreenScrollContainer {
+  position: relative;
+  flex: 1;
+}
+
+.hideFooter {
+  display: none;
+}
