--- a/src/component/talk/Talk.scss
+++ b/src/component/talk/Talk.scss
@@ -60,11 +60,17 @@
 }
 
 .phoneOnlyContainer {
+  composes: u-textCenter u-textSizeNml u-userFillColor from global;
+  margin-top: #{50/$font-size}rem !important;
   margin-bottom: #{40/$font-size}rem;
 }
 
+.phoneOnlyMobileContainer {
+  composes: u-textHeightLrg u-textSize15 from global;
+}
+
 .phoneOnlyMessage {
-  composes: u-marginBS u-textHeightMed from global;
+  composes: u-marginTL u-marginBS from global;
 }
 
 .phoneNumber {
