--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -449,3 +449,12 @@
     width: #{160/$font-size}rem;
   }
 }
+
+.Icon--talk {
+  svg {
+    min-width: #{50/$font-size}rem;
+    min-height: #{50/$font-size}rem;
+    height: #{50/$font-size}rem;
+    width: #{50/$font-size}rem;
+  }
+}
