Ensure there is less space between icon and text in success notif

--- a/src/component/shared/SuccessNotification/SuccessNotification.scss
+++ b/src/component/shared/SuccessNotification/SuccessNotification.scss
@@ -27,6 +27,16 @@
   }
 }
 
+.mobileMessages {
+  composes: messages;
+  margin-top: #{25/$font-size}rem;
+}
+
+.desktopMessages {
+  composes: messages;
+  margin-top: #{20/$font-size}rem;
+}
+
 .icon {
   composes: u-userFillCustomColor from global;
 }
