Ensure link color is same as brand color for call us screen

--- a/src/component/talk/Talk.scss
+++ b/src/component/talk/Talk.scss
@@ -65,7 +65,7 @@
 }
 
 .phoneNumber {
-  composes: u-textCenter from global;
+  composes: u-textCenter u-userLinkColor from global;
   font-size: #{20/$font-size}rem;
 }
 
