--- a/src/component/chat/ChatOfflineForm.scss
+++ b/src/component/chat/ChatOfflineForm.scss
@@ -1,5 +1,13 @@
 @import '../../styles/_vars.scss';
 
+.scrollContainerContent {
+  padding-bottom: #{20/$font-size}rem;
+}
+
+.doneButton {
+  width: 100%;
+}
+
 .submitButton {
   composes: u-hsizeAll from global;
   max-width: 100%;
@@ -12,6 +20,12 @@
 
 .loadingSpinner {
   composes: u-flex u-posFill u-posAbsolute u-flexAlignItemsCenter u-flexJustifyCenter from global;
+}
+
+.loadingSpinnerContainer {
+  height: #{100/$font-size}rem;
+  position: relative;
+  padding-top: 0 !important;
 }
 
 .info {
@@ -59,4 +73,30 @@
 
 .nameFieldWithSocialLogin {
   margin-bottom: #{7/$font-size}rem !important;
+}
+
+.submitBtn {
+  margin-top: #{15/$font-size}rem;
+  margin-bottom: #{15/$font-size}rem;
+  height: #{40/$font-size}rem;
+  float: right;
+
+  [dir='rtl'] & {
+    float: left;
+  }
+}
+
+.zendeskLogo {
+  z-index: 1;
+
+  [dir='rtl'] & {
+    right: #{16/$font-size}rem;
+
+    & > span {
+      padding-left: #{6/$font-size}rem !important;
+      padding-right: #{3/$font-size}rem !important;
+      margin-left: #{13/$font-size}rem !important;
+      margin-right: #{4/$font-size}rem !important;
+    }
+  }
 }
