Remove ScrollContainer's footer padding, style on elements margin themselves

--- a/src/component/container/ScrollContainer.scss
+++ b/src/component/container/ScrollContainer.scss
@@ -95,7 +95,7 @@
 }
 
 .footer {
-  composes: u-paddingHL u-posRelative u-paddingVM from global;
+  composes: u-paddingHL u-posRelative from global;
 }
 
 .footerShadow {
