--- a/src/component/shared/SuccessNotification/SuccessNotification.scss
+++ b/src/component/shared/SuccessNotification/SuccessNotification.scss
@@ -3,6 +3,7 @@
 .content {
   composes: u-textCenter u-textSizeNml u-textHeightMed from global;
   margin-top: #{50/$font-size}rem !important;
+  margin-bottom: 80%;
 }
 
 .contentMobile {
