--- a/src/component/submitTicket/SubmitTicketForm.scss
+++ b/src/component/submitTicket/SubmitTicketForm.scss
@@ -33,3 +33,8 @@
 .formWrapper {
   margin-bottom: #{15/$font-size}rem;
 }
+
+.buttonGroup {
+  margin-top: #{15/$font-size}rem;
+  margin-bottom: #{15/$font-size}rem;
+}
