Address visual regression on ScrollContainer footer change

--- a/src/component/field/SearchField.scss
+++ b/src/component/field/SearchField.scss
@@ -50,6 +50,10 @@
   composes: u-marginBL from global;
 }
 
+.notSearchedLogo {
+  margin-bottom: #{40/$font-size}rem;
+}
+
 .fullscreen {
   composes: u-paddingHN u-paddingBN from global;
 
