--- a/src/component/submitTicket/SubmitTicket.scss
+++ b/src/component/submitTicket/SubmitTicket.scss
@@ -80,9 +80,13 @@
 }
 
 .zendeskLogoButton {
-  margin-bottom: #{25/$font-size}rem;
+  margin-bottom: #{40/$font-size}rem;
 }
 
 .noZendeskLogoButton {
-  margin-bottom: #{5/$font-size}rem;
+  margin-bottom: #{20/$font-size}rem;
+}
+
+.scrollContainerSuccess {
+  overflow-y: hidden;
 }
