--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,4 @@
-$font-family: Helvetica, Arial, "Lucida Grande", sans-serif;
-$font-weight: 300;
-$line-height: 1.4;
-
+@import '@zendeskgarden/css-bedrock';
 
 /**
  * A thin layer on top of normalize.css that provides a starting point more
@@ -17,7 +14,6 @@ $line-height: 1.4;
 
 html {
   color: $body-color;
-  font: #{$font-size}px/#{$line-height} $font-family;
   overflow: hidden; /* 1 */
 }
 
@@ -78,4 +74,3 @@ select {
 select::-ms-expand { /* 4 */
   display: none;
 }
-
